--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <!-- #region Header-->
     <header>
-        <a href=""><span>Web</span>Studio</a>
+
         <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -19,8 +20,15 @@
             </ul>
         </nav>
         <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-            <a href="tel:++110001111111">+11 (000) 111-11-11</a>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:++110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+
         </address>
     </header>
     <!-- #endregion -->
@@ -63,35 +71,37 @@
         <!-- #endregion -->
 
         <!-- #region Our Team -->
-        <h2>Our Team</h2>
-        <ul>
-            <li>
-                <img src="images/team/img-1.jpg" alt="Mark Guerrero photo" width="264" height="260">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-            </li>
-            <li>
-                <img src="images/team/img-2.jpg" alt="Tom Ford photo" width="264" height="260">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
-            </li>
-            <li>
-                <img src="images/team/img-3.jpg" alt="Camila Garcia photo" width="264" height="260">
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-            </li>
-            <li>
-                <img src="images/team/img-4.jpg" alt="Daniel Wilson photo" width="264" height="260">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
-            </li>
-        </ul>
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="./images/team/img-1.jpg" alt="Mark Guerrero photo" width="264" height="260">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/team/img-2.jpg" alt="Tom Ford photo" width="264" height="260">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/team/img-3.jpg" alt="Camila Garcia photo" width="264" height="260">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/team/img-4.jpg" alt="Daniel Wilson photo" width="264" height="260">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
         <!-- #endregion -->
     </main>
 
     <!-- #region Footer-->
     <footer>
-        <a href=""><span>Web</span>Studio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     <!-- #endregion -->
